# textdb

./: .gitignore  CMakeLists.txt  README.md
lib/boost_1_82_0/lib/: libboost_atomic.so.1.82.0  libboost_chrono.so.1.82.0  libboost_container.so.1.82.0  libboost_context.so.1.82.0  libboost_contract.so.1.82.0  libboost_coroutine.so.1.82.0  libboost_date_time.so.1.82.0  libboost_fiber.so.1.82.0  libboost_filesystem.so.1.82.0  libboost_graph.so.1.82.0  libboost_iostreams.so.1.82.0  libboost_json.so.1.82.0  libboost_locale.so.1.82.0  libboost_log.so.1.82.0  libboost_log_setup.so.1.82.0  libboost_math_c99.so.1.82.0  libboost_math_c99f.so.1.82.0  libboost_math_c99l.so.1.82.0  libboost_math_tr1.so.1.82.0  libboost_math_tr1f.so.1.82.0  libboost_math_tr1l.so.1.82.0  libboost_nowide.so.1.82.0  libboost_prg_exec_monitor.so.1.82.0  libboost_program_options.so.1.82.0  libboost_random.so.1.82.0  libboost_regex.so.1.82.0  libboost_serialization.so.1.82.0  libboost_stacktrace_addr2line.so.1.82.0  libboost_stacktrace_backtrace.so.1.82.0  libboost_stacktrace_basic.so.1.82.0  libboost_stacktrace_noop.so.1.82.0  libboost_system.so.1.82.0  libboost_thread.so.1.82.0  libboost_timer.so.1.82.0  libboost_type_erasure.so.1.82.0  libboost_unit_test_framework.so.1.82.0  libboost_url.so.1.82.0  libboost_wave.so.1.82.0  libboost_wserialization.so.1.82.0
src/: common.h  main.cpp
src/core/: dberror.h
src/db/: columns.cpp  io.cpp  rows.cpp  table.cpp  table.h
src/util/: config.cpp  config.h  log.cpp  log.h
